--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlinx-serialization'
 
 apply plugin: 'kotlin-android'
 
@@ -31,6 +32,7 @@ android {
 }
 
 dependencies {
+    ext.anko_version = '0.10.8'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
@@ -44,6 +46,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-common-java8:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-reactivestreams-ktx:2.0.0'
-    implementation 'com.google.android.material:material:1.0.0-rc01' +
-            ''
+    implementation 'com.google.android.material:material:1.0.0-rc01'
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.10.0"
+    // Anko Commons
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
 }
