--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".zhihuscroll.ZhiHuScrollActivity">
+        <activity android:name=".cstmview.CstmViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
