--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,8 @@ dependencies {
     // Coroutine listeners for Anko Layouts
     implementation "org.jetbrains.anko:anko-sdk25-coroutines:$anko_version"
     implementation "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
+
+    implementation ("com.github.bumptech.glide:glide:4.8.0") {
+        exclude group: "com.android.support"
+    }
 }
