--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,5 @@ dependencies {
     implementation("com.github.bumptech.glide:glide:4.8.0") {
         exclude group: "com.android.support"
     }
+    implementation "com.google.android.material:material:+"
 }
